--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   height: 450px;
   background-image: 
   linear-gradient(to top, rgb(106, 79, 134), rgba(0, 0, 0, 0)),
-  url('https://media.discordapp.net/attachments/1284872446545104978/1369368716701073600/scott-shi-24-1.jpg?ex=681b9b7f&is=681a49ff&hm=e40c116bf54b4d609dd1469796c213a6f4bdcb7f0822629ee16b372acbb1c60a&=&format=webp&width=1565&height=810');
+  url('https://i.postimg.cc/GhGXm59G/scott-shi-24-1.webp');
   background-size: cover;
   background-position: center;
 }
